<resources>
    <string name="app_name">MC-Assignment-3</string>
    <string name="action_settings">Settings</string>
    <string name="action_quit">Quit</string>
    <string name="title_activity_read">ReadActivity</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Strings related to Settings -->

    <!-- Batch Option -->
    <string name="pref_batch">Select Batch</string>
    <string name="pref_batch_key">batch</string>
    <string name="pref_batch_btech">BTech</string>

    <!-- Storage Option -->
    <string name="pref_storage">Select Storage Option</string>
    <string name="pref_storage_key">storage</string>
    <string name="pref_storage_internal">Internal Storage</string>

    <!-- Read From Option -->
    <string name="pref_read">Read From</string>
    <string name="pref_read_key">read</string>
    <string name="pref_read_internal">Internal Storage</string>

    <!-- App Data option -->
    <string name="pref_appdata">App Data Public or Private</string>
    <string name="pref_appdata_key">appdata</string>
    <string name="pref_appdata_public">Public</string>

</resources>
