<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:title="@string/pref_batch"
        android:key="@string/pref_batch_key"
        android:defaultValue="@string/pref_batch_btech"
        android:summary="@string/pref_batch_btech"
        android:entryValues="@array/pref_batch_values"
        android:entries="@array/pref_batch_options"/>

    <ListPreference
        android:title="@string/pref_storage"
        android:key="@string/pref_storage_key"
        android:defaultValue="@string/pref_storage_internal"
        android:summary="@string/pref_storage_internal"
        android:entryValues="@array/pref_storage_values"
        android:entries="@array/pref_storage_options"/>

    <ListPreference
        android:title="@string/pref_read"
        android:key="@string/pref_read_key"
        android:defaultValue="@string/pref_read_internal"
        android:summary="@string/pref_read_internal"
        android:entryValues="@array/pref_storage_values"
        android:entries="@array/pref_storage_options"/>

    <ListPreference
        android:title="@string/pref_appdata"
        android:key="@string/pref_appdata_key"
        android:defaultValue="@string/pref_appdata_public"
        android:summary="@string/pref_appdata_public"
        android:entryValues="@array/pref_appdata_values"
        android:entries="@array/pref_appdata_options"/>

</PreferenceScreen>
